--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/freya-davies/Dinner-Roster#readme",
   "dependencies": {
+    "calendar-dates": "^2.6.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.5.1",
     "knex": "^0.20.1",
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
+    "react-calendar": "^2.19.2",
     "sqlite3": "^4.1.0"
   }
 }
