--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
     "react-calendar": "^2.19.2",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "tui-calendar": "^1.12.7"
   }
 }
