--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "knex": "^0.20.1",
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
-    "react-calendar": "^2.19.2",
-    "sqlite3": "^4.1.0",
-    "tui-calendar": "^1.12.7"
+    "sqlite3": "^4.1.0"
   }
 }
